changes from study group

--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
-    --bg_main: #0a1f44;
+    --bg_main: #9ab9f0;
     --text_light: #fff;
     --text_med: #53627c;
-    --text_dark: #1e2432;
+    --text_dark: #000000;
     --red: #ff1e42;
     --darkred: #c3112d;
     --orange: #ff8c00;
